STYLE: Aligned the Form correctly and fixed the left side

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ button {
     font-size: 1.5rem;
 }
 
+input {
+    height: 2rem;
+    width: 100%;
+}
+
 .Section {
     width: 65%;
     display: flex;
@@ -31,6 +36,18 @@ button {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+}
+
+.row {
+    display: flex;
+    gap: 2rem;
+    width: 80%;
+}
+
+.column {
+    height: 5rem;
+    flex: 50%;
+    font-size: 1.5rem;
 }
 
 #leftSide{
@@ -42,7 +59,7 @@ button {
     background-image: url("leftImage.jpeg");
     display: flex;
     justify-content: center;
-    align-items: stretch;
+    align-items: center;
 }
 
 #logoBlock {
